# Echovision_Rktoolkit2

./: CMakeLists.txt  main.cpp
include/: JsonPacker.h  MotDetect.hpp  file_manager.h  globaltypes.h  kalman.hpp  postprocess.h  rk_common.h  rknnPool.hpp  rknn_api.h  socketsender.h
src/: JsonPacker.cpp  cqueue.hpp  file_manager.cpp  postprocess.cc  preprocess.cc  socketsender.cpp
